feat: implementation form validation with yup & on-change

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
-    "mini-css-extract-plugin": "^2.9.0"
+    "mini-css-extract-plugin": "^2.9.0",
+    "on-change": "^5.0.1",
+    "yup": "^1.4.0"
   }
 }
