--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "i18next": "^23.12.2",
     "mini-css-extract-plugin": "^2.9.0",
     "on-change": "^5.0.1",
     "yup": "^1.4.0"
