--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "i18next": "^23.12.2",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.9.0",
     "on-change": "^5.0.1",
     "yup": "^1.4.0"
